# tiny-sota

./: .gitignore  LICENSE  README.md  build_tiny_sota.sh  install_tiny_sota.sh  pyproject.toml
examples/: kokoro_inference.py  llama_inference.py  qwen_inference.py  whisper_inference.py
examples/tests/: llama_inference.py  qwen_inference.py
src/tiny_sota/cloud/: __init__.py  main.py
src/tiny_sota/inference/: __init__.py  engines.py  tokenizers.py  utils.py
src/tiny_sota/meta/: __init__.py  coco.txt
src/tiny_sota/models/: __init__.py  attention.py  configs.py  kokoro_arch.py  kokoro_load.py  kokoro_utils.py  llama_arch.py  llama_load.py  llm_utils.py  qwen_arch.py  qwen_load.py  tiny_load.py  tiny_modules.py  utils.py  whisper_arch.py  whisper_decode.py  whisper_decode_inner.py  whisper_load.py  whisper_meta.py  whisper_tok.py  whisper_transfer.py  whisper_utils.py
src/tiny_sota/tests/: model_arch_understand.py
src/tiny_sota/tiny_utils/: __init__.py  core.py  display.py  postprocess.py  preprocess.py
src/tiny_sota/tokenizers/: llama.py  qwen.py  whisper.py
src/tiny_sota/transfers/: __init__.py  kokoro.py  llama.py  qwen.py  whisper.py
src/tiny_sota/vision/: __init__.py
tests/: llama_inference.py  main.py  qwen_inference.py  test_whisper.py  whisper_inference.py
tests/files/: yourself.txt
