[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tiny-sota"
version = "0.0.1"
authors = [
  { name="Marvin Mboya", email="marvindesmond@gmail.com" },
]

description = "optimize SOTA models to the hardware architectures for optimal low-latency inferencing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing"
]

license-files = ["LICEN[CS]E*"]

dependencies = [
  'torch',
  'torchvision',
  'safetensors'
]

[project.urls]
Homepage = "https://github.com/Marvin-desmond/tiny-sota"
Issues = "https://github.com/Marvin-desmond/tiny-sota/issues"
repository = "https://github.com/Marvin-desmond/tiny-sota"
